# simd_aligned

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: benchmarks.rs  vectors.rs
examples/: basic.rs
scripts/: update_readmes.sh
src/: arch.rs  container.rs  conversion.rs  lib.rs  mat.rs  matrix.rs  packed.rs  rows.rs  sealed.rs  traits.rs  vec.rs  vector.rs
