[package]
name = "simd_aligned"
description="Safe and fast SIMD-aligned data structures with easy and transparent 'flat' access."
repository = "https://github.com/ralfbiedert/simd_aligned_rust"
version = "0.5.0"
readme = "README.md"
categories = ["data-structures"]
keywords = ["simd", "wide", "memory", "aligned"]
license = "MIT"
authors = ["Ralf Biedert <rb@xr.io>"]
edition = "2021"

[dependencies]
wide = { version = "0.7.30" }

[badges]
travis-ci = { repository = "ralfbiedert/simd_aligned_rust" }
maintenance = { status = "experimental" }

