[package]
name = "simd_aligned"
description="Safe and fast SIMD-aligned data structures with easy and transparent 'flat' access."
repository = "https://github.com/ralfbiedert/simd_aligned_rust"
version = "0.6.1"
readme = "README.md"
categories = ["data-structures"]
keywords = ["simd", "wide", "memory", "aligned"]
license = "MIT"
authors = ["Ralf Biedert <rb@xr.io>"]
rust-version = "1.83"
edition = "2021"

[dependencies]
wide = { version = "0.7.30" }


